# multilingual-vlm-reasoning-audit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: models.yaml
data/original/: dataset.json
data/translated/bn/: questions.json  retranslate_ids.json
data/translated/hi/: questions.json  retranslate_ids.json
data/translated/kn/: questions.json  retranslate_ids.json
data/translated/mr/: questions.json  retranslate_ids.json
data/translated/ta/: questions.json  retranslate_ids.json
data/translated/te/: questions.json  retranslate_ids.json
data/verification/: agreement_scores.json  bn_sample.json  hi_sample.json  kn_sample.json  mr_sample.json  ta_sample.json  te_sample.json
figures/: fig4_qualitative.json
paper/: main.bbl  main.tex  references.bib
results/processed/: category_table.csv  main_table.csv  summary.json
scripts/: 01_download_data.py  02_translate.py  03_verify_translations.py  04_run_inference_api.py  04_run_inference_open.py  05_extract_answers.py  06_evaluate.py  07_visualize.py  generate_extra_figures.py  upload_results_to_hf.py  upload_to_hf.py
